--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -17,15 +17,18 @@
     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
         Add user
     </button>
+    <br></br>
 
     <div class="table-wrapper">
-        <table id="example">
+        <table id="example" class="table table-striped table-bordered" cellspacing="0" width="100%">
             <thead>
                 <tr>
                     <th scope="col">Name</th>
                     <th scope="col">Username</th>
                     <th scope="col">Email</th>
                     <th scope="col">Occupation</th>
+                    <th scope="col">Edit</th>
+                    <th scope="col">Delete</th>
                 </tr>
             </thead>
             <tbody>
@@ -35,6 +38,8 @@
                         <td><%= user.username %></td>
                         <td><%= user.email %></td>
                         <td><%= user.occupation %></td>
+                        <td><p data-placement="top" data-toggle="tooltip" title="Edit"><button class="btn btn-primary btn-xs" data-title="Edit" data-toggle="modal" data-target="#edit" ><span class="glyphicon glyphicon-pencil"></span></button></p></td>
+                        <td><p data-placement="top" data-toggle="tooltip" title="Delete"><button class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal" data-target="#delete" ><span class="glyphicon glyphicon-trash"></span></button></p></td>
                     </tr>
                 <% }); %>
             </tbody>
