--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,18 +1,8 @@
-<!-- views/partials/header.ejs -->
+<!-- Image and text -->
+<nav class="navbar navbar-light bg-light" style="background-color: #e3f2fd;">
+    <a class="navbar-brand" href="#">
+      <img src="https://image.flaticon.com/icons/svg/554/554857.svg" width="80" height="70" class="d-inline-block align-top" alt="">
+     
+    </a>
 
-<nav class="navbar navbar-default" role="navigation">
-    <div class="container-fluid">
-    
-        <div class="navbar-header">
-            <a class="navbar-brand" href="#">
-                <span class="glyphicon glyphicon glyphicon-tree-deciduous"></span>
-            </a>
-    
-            <ul class="nav navbar-nav">
-                <li><a href="/">Home</a></li>
-                <li><a href="/about">About</a></li>
-            </ul>
-        </div>
-    
-    </div>
-    </nav>
+</nav>
