--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,7 +1,7 @@
 <!-- Image and text -->
 <nav class="navbar navbar-light bg-light" style="background-color: #e3f2fd;">
     <a class="navbar-brand" href="#">
-      <img src="https://image.flaticon.com/icons/svg/554/554857.svg" width="80" height="70" class="d-inline-block align-top" alt="">
+      <img src="https://www.sps.gov.sg/images/default-source/default-album/1-sps-logo-2019-noborder-webres.png"  class="d-inline-block align-top" alt="">
      
     </a>
 
