--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -19,7 +19,7 @@
         </header>
         
         <div class="page-header">
-            <h1> Employee Page</h1>
+            <h1> Prison Administrator Page</h1>
             <button type="button" class="btn btn-outline-success my-2 my-sm-0" data-toggle="modal" data-target="#myModal" style="float: right;">Add User</button> 
         </div>
     
