--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,6 +1,6 @@
 <!-- views/partials/head.ejs -->
 <meta charset="UTF-8">
-<title>Super awesome Employee Demo</title>
+<title>Employee Demo</title>
 
 <!-- CSS (load bootstrap from a CDN) -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.css">
@@ -16,6 +16,8 @@
 <script src="https://cdn.datatables.net/1.10.19/js/dataTables.bootstrap4.min.js"></script>
 <script src="https://cdn.datatables.net/buttons/1.5.6/js/dataTables.buttons.min.js"></script>
 
+
+
 <style>
 
     .modal-header-primary {
@@ -29,5 +31,12 @@
         -moz-border-radius-topright: 5px;
         border-top-left-radius: 5px;
         border-top-right-radius: 5px;
+    }
+
+    .bg-cover {
+        background-image: url('https://www.mha.gov.sg/images/default-source/carousel-banner/banner-our-guardians.jpg');
+        background-size: 100% 150%;
+
+        
     }
 </style>
