--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,102 +1,120 @@
-<!-- views/pages/index.ejs -->
+            <!-- views/pages/index.ejs -->
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <% include ../partials/head %>
-    <% include modal %>
-    <% include edit-modal %>
-    
-</head>
-
-
+            <!DOCTYPE html>
+            <html lang="en">
+            <head>
+                <% include ../partials/head %>
+                <% include modal %>
+                <% include edit-modal %>
+                
+            </head>
 
 
 
-    <div class=container>
-        <header>
-            <% include ../partials/header %>
-        </header>
-        
-        <div class="page-header">
-            <h1> Employee Page</h1>
-            <button type="button" class="btn btn-outline-success my-2 my-sm-0" data-toggle="modal" data-target="#myModal" style="float: right;">Add User</button> 
-        </div>
-    
-        <body>
-            <div class="table-wrapper">
-                <table id="usertable" class = "table table-striped table-bordered" cellspacing="0" width="100%">
-                    <thead class="thead-light">
-                        <tr>
-                            <th scope="col">Name</th>
-                            <th scope="col">Username</th>
-                            <th scope="col">Email</th>
-                            <th scope="col">Occupation</th>
-                            <th scope="col">Edit</th>
-                            <th scope="col">Delete</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <% data.forEach(function(user) { %>
-                            <tr>
-                                <td><%= user.name %></td>
-                                <td><%= user.username %></td>
-                                <td><%= user.email %></td>
-                                <td><%= user.occupation %></td>
-                                <td><p data-placement="top" data-toggle="tooltip" title="Edit"><button class="btn btn-edit btn-primary btn-xs" data-title="Edit" data-toggle="modal" data-target="#editModal" ><span class="fa fa-pencil"></span></button></p></td>
-                                <td><p data-placement="top" data-toggle="tooltip" title="Delete"><button class="btn btn-delete btn-danger btn-xs" data-title="Delete"><span class="fa fa-minus"></span></button></p></td>
-                            </tr>
-                        <% }); %>
-                    </tbody>
-                </table>
-        </body>
+                <header>
+                    <% include ../partials/header %>
+                </header>
 
-        
-    </div>
+                <div class="jumbotron jumbotron bg-cover">
+                        as
+                </div>
+                
+
+                <div class=container>
+                    
+                    <!-- Area Chart Example-->
+                    <div class="card mb-3">
+                        <div class="card-header">
+                            <i class="fas fa-chart-area"></i>
+                                Employee Chart</div>
+                                <div class="card-body">
+                                    <canvas id="myAreaChart" width="100%" height="30"></canvas>
+                                </div>
+                        <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
+                    </div>
+                    
+                    <div class="card mb-3">
+                                <div class="card-header">
+                                    <i class="fa fa-table"></i>
+                                    Employee table
+                                    <button type="button" class="btn btn-outline-success my-2 my-sm-0" data-toggle="modal" data-target="#myModal" style="float: right;">Add User</button> 
+                                </div>
+                                <div class="card-body">
+                                        <div class="table-responsive">
+                                                <table id="usertable" class = "table table-striped table-bordered" cellspacing="0" width="100%">
+                                                    <thead class="thead-light">
+                                                        <tr>
+                                                            <th scope="col">Name</th>
+                                                            <th scope="col">Username</th>
+                                                            <th scope="col">Email</th>
+                                                            <th scope="col">Occupation</th>
+                                                            <th scope="col">Edit</th>
+                                                            <th scope="col">Delete</th>
+                                                        </tr>
+                                                    </thead>
+                                                    <tbody>
+                                                        <% data.forEach(function(user) { %>
+                                                            <tr>
+                                                                <td><%= user.name %></td>
+                                                                <td><%= user.username %></td>
+                                                                <td><%= user.email %></td>
+                                                                <td><%= user.occupation %></td>
+                                                                <td><p data-placement="top" data-toggle="tooltip" title="Edit"><button class="btn btn-edit btn-primary btn-xs" data-title="Edit" data-toggle="modal" data-target="#editModal" ><span class="fa fa-pencil"></span></button></p></td>
+                                                                <td><p data-placement="top" data-toggle="tooltip" title="Delete"><button class="btn btn-delete btn-danger btn-xs" data-title="Delete"><span class="fa fa-minus"></span></button></p></td>
+                                                            </tr>
+                                                        <% }); %>
+                                                    </tbody>
+                                                </table>
+                                            </div>
+                                </div>
+
+                    </div>
+
+            <script>
+            $(document).ready(function() {
+                var table = $('#usertable').DataTable();
+                $('#usertable tbody').on('click', '.btn-delete', function () {
+                    var data = table.row( $(this).parents('tr') ).data();
+                    console.log(data[2])
+                    $.ajax({
+                        url: '/deleteUser',
+                        type: 'POST',
+                        data: {"email":data[2]}
+                    }).done(function(result){
+                        console.log(result)
+                        if (result =="successfully deleted user"){
+                            alert("user has been successfully deleted")
+                            window.location.href="/";
+                        }
+
+                    });
+                });
+
+                $('#usertable tbody').on('click', '.btn-edit', function () {
+                    var data = table.row( $(this).parents('tr') ).data();
+                    console.log(data);
+                    $('#editModal').on('show.bs.modal', function(e) {
+                        $(e.currentTarget).find('input[name="name"]').val(data[0]);
+                        $(e.currentTarget).find('input[name="username"]').val(data[1]);
+                        $(e.currentTarget).find('input[name="email"]').val(data[2]);
+                        $(e.currentTarget).find('input[name="occupation"]').val(data[3]);
+                    });
+
+                });
+
+                
 
 
-<script>
-$(document).ready(function() {
-    var table = $('#usertable').DataTable();
-    $('#usertable tbody').on('click', '.btn-delete', function () {
-        var data = table.row( $(this).parents('tr') ).data();
-        console.log(data[2])
-        $.ajax({
-            url: '/deleteUser',
-            type: 'POST',
-            data: {"email":data[2]}
-        }).done(function(result){
-            console.log(result)
-            if (result =="successfully deleted user"){
-                alert("user has been successfully deleted")
-                window.location.href="/";
-            }
+            } );
 
-        });
-    });
-
-    $('#usertable tbody').on('click', '.btn-edit', function () {
-        var data = table.row( $(this).parents('tr') ).data();
-        console.log(data);
-        $('#editModal').on('show.bs.modal', function(e) {
-            $(e.currentTarget).find('input[name="name"]').val(data[0]);
-            $(e.currentTarget).find('input[name="username"]').val(data[1]);
-            $(e.currentTarget).find('input[name="email"]').val(data[2]);
-            $(e.currentTarget).find('input[name="occupation"]').val(data[3]);
-        });
-
-    });
-
-    
+            </script>
+            
+            <!-- chats scripts-->
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
+            <script type="text/javascript" src="chart-area.js"></script>
+            <footer>
+                <% include ../partials/footer %>
+            </footer>
 
 
-} );
-
-</script>
-
-<footer>
-    <% include ../partials/footer %>
-</footer>
-
-
-</html>
+            </html>
