--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -109,7 +109,7 @@
 
             </script>
             
-            <!-- chats scripts-->
+            <!-- chats script-->
             <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
             <script type="text/javascript" src="chart-area.js"></script>
             <footer>
