--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -22,7 +22,7 @@
 
                 <div class=container>
                     
-                    <!-- Area Chart Example-->
+                    <!-- Area Chart Exampl-->
                     <div class="card mb-3">
                         <div class="card-header">
                             <i class="fas fa-chart-area"></i>
