--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -34,7 +34,7 @@
     }
 
     .bg-cover {
-        background-image: url('https://www.mha.gov.sg/images/default-source/carousel-banner/banner-our-guardians.jpg');
+        background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQyZ9057k5VsRaFNs_jyQjPdYm_mWCeRU8JpgXLak2QYb_nL1Zg');
         background-size: 100% 150%;
 
         
