--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -32,7 +32,7 @@
                     <div class="card mb-3">
                                 <div class="card-header">
                                     <i class="fa fa-table"></i>
-                                    Employee table
+                                    Employee tables
                                     <button type="button" class="btn btn-outline-success my-2 my-sm-0" data-toggle="modal" data-target="#myModal" style="float: right;">Add User</button> 
                                 </div>
                                 <div class="card-body">
